# HaskeDex

./: CHANGELOG.md  HaskeDex.cabal  LICENSE  README.md
app/: Main.hs
src/: FileInfoLib.hs  HandleArgsLib.hs  HaskeDexDoBlockLib.hs
