cabal-version:      3.0
name:               HaskeDex
version:            0.1.0.0
synopsis:
    Recreation of the "hcal" pager application described in the "Effective Haskell" book
license:            MIT
license-file:       LICENSE
author:             TulioG_Projects
maintainer:         tuliog.projects@gmail.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskeDexDoBlockLib
    build-depends:    base ^>=4.18.3.0,
                      bytestring,
                      text,
                      process,
                      directory,
                      time,
    hs-source-dirs:   src
    default-language: Haskell2010

executable HaskeDex
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        HaskeDex
    hs-source-dirs:   app
    default-language: Haskell2010
